kubernetes/monitoring/victoria-metrics/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  parentRefs:
    - name: internal
      namespace: network
      sectionName: https
  hostnames:
    - alerts.whoverse.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: vmalertmanager-victoria-metrics
          port: 9093
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vmalert
  namespace: monitoring
spec:
  parentRefs:
    - name: internal
      namespace: network
      sectionName: https
  hostnames:
    - vmalert.whoverse.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: vmalert-victoria-metrics
          port: 8080
